--- a/index.html
+++ b/index.html
@@ -1,103 +1,137 @@
 <!-- Åldersverifiering - Klistra in innan </body> i theme.liquid -->
-<div id="age-verification-overlay" style="
+<link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400&display=swap" rel="stylesheet">
+
+<style>
+#age-verification-overlay {
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(255, 255, 255, 0.7); /* Genomskinlig vit bakgrund */
-  backdrop-filter: blur(10px); /* Lägg till oskärpa på bakgrunden */
+  background: rgba(255, 255, 255, 0.85);
+  backdrop-filter: blur(12px);
   z-index: 9999;
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
   text-align: center;
+  font-family: 'DM Sans', sans-serif;
+  visibility: visible;
+  opacity: 1;
+  transition: opacity 0.3s ease-out;
+  overflow-y: auto;
   padding: 2rem;
-  font-family: 'Helvetica Neue', sans-serif;
-  visibility: hidden; /* Starta som osynlig */
-  opacity: 0; /* Starta osynlig */
-  transition: opacity 0.2s ease-out; /* Snabbare transition */
-">
-  <div class="container" style="
-    background: #f9f9f9;
-    padding: 2.5rem 2rem;
-    border-radius: 20px;
-    box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
-    max-width: 420px;
-    width: 90%;
-  ">
-    <!-- Logotyp -->
-    <img src="https://cdn.shopify.com/s/files/1/0875/8788/1305/files/cbdFlora.webp?v=1745136036"
-         alt="cbdFlora logotyp"
-         style="max-width: 150px; margin: 0 auto 1.5rem auto; display: block;">
+}
 
-    <!-- Titel -->
-    <h2 style="font-size: 1.8rem; color: #8EBF2A; margin-bottom: 1rem; font-weight: medium; font-family: 'Quincy CF', sans-serif;">
-      Hej och välkommen!
-    </h2>
-    
-    <!-- Text -->
-    <p style="margin-bottom: 1.5rem; color: #444; font-size: 1rem; line-height: 1.6;">
-      Du måste vara minst 18 år för att besöka vår webbplats.
-    </p>
+#age-verification-container {
+  background: #f9f9f9;
+  padding: 5rem 4rem;
+  border-radius: 25px;
+  box-shadow: 0 10px 30px rgba(0, 0, 0, 0.15);
+  width: 100%;
+  max-width: 600px;
+}
 
-    <!-- Knappsektion -->
-    <div style="display: flex; flex-direction: column; gap: 1rem;">
-      <button onclick="confirmAge()" style="
-        background-color: #8EBF2A;
-        color: white;
-        border: none;
-        padding: 0.8rem 1.5rem;
-        font-size: 1rem;
-        font-weight: bold;
-        border-radius: 30px; /* Rundade hörn med 30px */
-        cursor: pointer;
-        transition: background-color 0.3s ease;
-      ">Jag är 18 år eller äldre</button>
+#age-verification-container img {
+  max-width: 220px;
+  margin: 0 auto 2.5rem auto;
+  display: block;
+}
 
-      <button onclick="leaveSite()" style="
-        background-color: #eee;
-        color: #555;
-        border: 1px solid #ccc;
-        padding: 0.8rem 1.5rem;
-        font-size: 1rem;
-        border-radius: 30px; /* Rundade hörn med 30px */
-        cursor: pointer;
-        transition: background-color 0.3s ease;
-      ">Nej, lämna sidan</button>
+#age-verification-container h2 {
+  font-size: 3.5rem;
+  color: #8EBF2A;
+  margin-bottom: 2.5rem;
+  font-weight: 400;
+}
+
+#age-verification-container p {
+  margin-bottom: 3rem;
+  color: #444;
+  font-size: 2rem;
+  line-height: 1.8;
+}
+
+.age-verification-buttons {
+  display: flex;
+  flex-direction: column;
+  gap: 1.8rem;
+}
+
+.age-verification-buttons button {
+  padding: 1.5rem 2.5rem;
+  font-size: 1.8rem;
+  font-weight: bold;
+  border-radius: 35px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.age-verification-buttons button:first-child {
+  background-color: #8EBF2A;
+  color: white;
+  border: none;
+}
+
+.age-verification-buttons button:last-child {
+  background-color: #eee;
+  color: #555;
+  border: 1px solid #ccc;
+}
+
+/* RESPONSIV FÖRSTÄRKNING */
+@media (max-width: 768px) {
+  #age-verification-container {
+    padding: 6rem 3rem;
+    max-width: 90%;
+  }
+  #age-verification-container h2 {
+    font-size: 4rem;
+  }
+  #age-verification-container p {
+    font-size: 2.4rem;
+  }
+  .age-verification-buttons button {
+    font-size: 2.2rem;
+    padding: 2rem 2.5rem;
+  }
+}
+
+@media (max-width: 480px) {
+  #age-verification-container {
+    padding: 7rem 2rem;
+  }
+  #age-verification-container h2 {
+    font-size: 4.5rem;
+  }
+  #age-verification-container p {
+    font-size: 2.8rem;
+  }
+  .age-verification-buttons button {
+    font-size: 2.4rem;
+    padding: 2.5rem;
+  }
+}
+</style>
+
+<div id="age-verification-overlay">
+  <div id="age-verification-container">
+    <img src="https://cdn.shopify.com/s/files/1/0875/8788/1305/files/cbdFlora.webp?v=1745136036" alt="cbdFlora logotyp">
+    <h2>Hej och Välkommen</h2>
+    <p>Du måste vara minst 18 år för att besöka vår webbplats.</p>
+    <div class="age-verification-buttons">
+      <button onclick="confirmAge()">Jag är 18 år eller äldre</button>
+      <button onclick="leaveSite()">Nej, lämna sidan</button>
     </div>
   </div>
 </div>
 
 <script>
-  // Kontrollera om åldersverifieringen redan är godkänd
-  function confirmAge() {
-    localStorage.setItem('ageVerified', 'true');
-    document.getElementById('age-verification-overlay').style.opacity = '0'; // Göm overlay snabbt
-    setTimeout(function() {
-      document.getElementById('age-verification-overlay').style.visibility = 'hidden'; // Göm helt efter animationen
-      document.body.style.overflow = 'auto'; // Återaktivera rullning
-    }, 200); // Samma tid som transitionen (200ms)
-  }
+function confirmAge() {
+  window.location.href = "https://cbdflora.se";
+}
 
-  function leaveSite() {
-    window.location.href = "https://www.google.com"; // ← Ändra till valfri extern sida
-  }
-
-  window.addEventListener('load', function () {
-    const isVerified = localStorage.getItem('ageVerified');
-    
-    // Om åldern redan är verifierad, döljs åldersverifieringen direkt
-    if (isVerified) {
-      document.getElementById('age-verification-overlay').style.visibility = 'hidden'; // Döljer direkt
-      document.getElementById('age-verification-overlay').style.opacity = '0'; // Gör den osynlig direkt
-      document.body.style.overflow = 'auto'; // Återaktivera rullning
-    } else {
-      // Om åldersverifiering inte är godkänd, visa overlayn direkt
-      document.getElementById('age-verification-overlay').style.visibility = 'visible';
-      document.getElementById('age-verification-overlay').style.opacity = '1'; // Gör den synlig direkt
-      document.body.style.overflow = 'hidden'; // Förhindra rullning tills verifiering är gjord
-    }
-  });
+function leaveSite() {
+  window.location.href = "https://www.google.com";
+}
 </script>
