--- a/index.html
+++ b/index.html
@@ -1,138 +1,114 @@
 <!-- Åldersverifiering - Klistra in innan </body> i theme.liquid -->
-<link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400&display=swap" rel="stylesheet">
-
-<style>
-#age-verification-overlay {
+<div id="age-verification-overlay" style="
   position: fixed;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
-  background: rgba(255, 255, 255, 0.85);
-  backdrop-filter: blur(12px);
+  width: 100vw;
+  height: 100vh;
+  background: rgba(255, 255, 255, 0.7);
+  backdrop-filter: blur(10px);
   z-index: 9999;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   text-align: center;
-  font-family: 'DM Sans', sans-serif;
-  visibility: visible;
-  opacity: 1;
-  transition: opacity 0.3s ease-out;
-  overflow-y: auto;
   padding: 2rem;
-}
+  font-family: 'Helvetica Neue', sans-serif;
+  visibility: hidden;
+  opacity: 0;
+  transition: opacity 0.2s ease-out;
+  overflow: hidden;
+">
+  <div class="container" style="
+    background: #f9f9f9;
+    padding: 2.5rem 2rem;
+    border-radius: 20px;
+    box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
+    width: 90%;
+    max-width: 420px;
+  ">
+    <img src="https://cdn.shopify.com/s/files/1/0875/8788/1305/files/cbdFlora.webp?v=1745136036"
+         alt="cbdFlora logotyp"
+         style="max-width: 150px; margin: 0 auto 1.5rem auto; display: block;">
+    
+    <h2 style="
+      font-size: 1.8rem;
+      color: #8EBF2A;
+      margin-bottom: 1rem;
+      font-weight: 400;
+      font-family: 'DM Sans', sans-serif;
+    ">
+      Hej och välkommen!
+    </h2>
 
-#age-verification-container {
-  background: #f9f9f9;
-  padding: 4rem 3rem;
-  border-radius: 20px;
-  box-shadow: 0 10px 30px rgba(0, 0, 0, 0.15);
-  width: 100%;
-  max-width: 600px;
-}
+    <p style="margin-bottom: 1.5rem; color: #444; font-size: 1rem; line-height: 1.6;">
+      Du måste vara minst 18 år för att besöka vår webbplats.
+    </p>
 
-#age-verification-container img {
-  max-width: 200px;
-  margin: 0 auto 2rem auto;
-  display: block;
-}
+    <div style="display: flex; flex-direction: column; gap: 1rem;">
+      <button onclick="confirmAge()" style="
+        background-color: #8EBF2A;
+        color: white;
+        border: none;
+        padding: 0.8rem 1.5rem;
+        font-size: 1rem;
+        font-weight: bold;
+        border-radius: 30px;
+        cursor: pointer;
+        transition: background-color 0.3s ease;
+      ">Jag är 18 år eller äldre</button>
 
-#age-verification-container h2 {
-  font-size: 3rem;
-  color: #8EBF2A;
-  margin-bottom: 2rem;
-  font-weight: 400;
-}
-
-#age-verification-container p {
-  margin-bottom: 2.5rem;
-  color: #444;
-  font-size: 1.6rem;
-  line-height: 1.6;
-}
-
-.age-verification-buttons {
-  display: flex;
-  flex-direction: column;
-  gap: 1.5rem;
-}
-
-.age-verification-buttons button {
-  padding: 1.2rem 2rem;
-  font-size: 1.6rem;
-  font-weight: bold;
-  border-radius: 30px;
-  cursor: pointer;
-  transition: background-color 0.3s ease;
-}
-
-.age-verification-buttons button:first-child {
-  background-color: #8EBF2A;
-  color: white;
-  border: none;
-}
-
-.age-verification-buttons button:last-child {
-  background-color: #eee;
-  color: #555;
-  border: 1px solid #ccc;
-}
-
-/* RESPONSIV FÖR MOBIL OCH IPAD */
-@media (max-width: 768px) {
-  #age-verification-container {
-    padding: 5rem 2rem;
-    max-width: 90%;
-  }
-  #age-verification-container h2 {
-    font-size: 3.5rem;
-  }
-  #age-verification-container p {
-    font-size: 2rem;
-  }
-  .age-verification-buttons button {
-    font-size: 1.8rem;
-    padding: 1.8rem 2rem;
-  }
-}
-
-@media (max-width: 480px) {
-  #age-verification-container {
-    padding: 5rem 1.5rem;
-  }
-  #age-verification-container h2 {
-    font-size: 3.8rem;
-  }
-  #age-verification-container p {
-    font-size: 2.2rem;
-  }
-  .age-verification-buttons button {
-    font-size: 2rem;
-    padding: 2rem 2.5rem;
-  }
-}
-</style>
-
-<div id="age-verification-overlay">
-  <div id="age-verification-container">
-    <img src="https://cdn.shopify.com/s/files/1/0875/8788/1305/files/cbdFlora.webp?v=1745136036" alt="cbdFlora logotyp">
-    <h2>Hej och Välkommen</h2>
-    <p>Du måste vara minst 18 år för att besöka vår webbplats.</p>
-    <div class="age-verification-buttons">
-      <button onclick="confirmAge()">Jag är 18 år eller äldre</button>
-      <button onclick="leaveSite()">Nej, lämna sidan</button>
+      <button onclick="leaveSite()" style="
+        background-color: #eee;
+        color: #555;
+        border: 1px solid #ccc;
+        padding: 0.8rem 1.5rem;
+        font-size: 1rem;
+        border-radius: 30px;
+        cursor: pointer;
+        transition: background-color 0.3s ease;
+      ">Nej, lämna sidan</button>
     </div>
   </div>
 </div>
 
 <script>
-function confirmAge() {
-  window.location.href = "https://cbdflora.se";
-}
+  function confirmAge() {
+    window.location.href = "https://cbdflora.se"; // Skickar till riktiga sidan
+  }
 
-function leaveSite() {
-  window.location.href = "https://www.google.com";
-}
+  function leaveSite() {
+    window.location.href = "https://www.google.com"; // Skickas bort
+  }
+
+  window.addEventListener('load', function () {
+    document.getElementById('age-verification-overlay').style.visibility = 'visible';
+    document.getElementById('age-verification-overlay').style.opacity = '1';
+    document.body.style.overflow = 'hidden';
+  });
 </script>
+
+<style>
+@media (max-width: 768px) {
+  #age-verification-overlay .container {
+    max-width: 95%;
+    padding: 3rem 1.5rem;
+  }
+
+  #age-verification-overlay h2 {
+    font-size: 2.2rem; /* Större rubrik på mobil */
+  }
+
+  #age-verification-overlay p {
+    font-size: 1.1rem;
+  }
+
+  #age-verification-overlay button {
+    font-size: 1.1rem;
+    padding: 1rem;
+  }
+}
+</style>
+
 
