--- a/index.html
+++ b/index.html
@@ -1,114 +1,76 @@
-<!-- Åldersverifiering - Klistra in innan </body> i theme.liquid -->
-<div id="age-verification-overlay" style="
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100vw;
-  height: 100vh;
-  background: rgba(255, 255, 255, 0.7);
-  backdrop-filter: blur(10px);
-  z-index: 9999;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
-  padding: 2rem;
-  font-family: 'Helvetica Neue', sans-serif;
-  visibility: hidden;
-  opacity: 0;
-  transition: opacity 0.2s ease-out;
-  overflow: hidden;
-">
-  <div class="container" style="
-    background: #f9f9f9;
-    padding: 2.5rem 2rem;
-    border-radius: 20px;
-    box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
-    width: 90%;
-    max-width: 420px;
-  ">
-    <img src="https://cdn.shopify.com/s/files/1/0875/8788/1305/files/cbdFlora.webp?v=1745136036"
-         alt="cbdFlora logotyp"
-         style="max-width: 150px; margin: 0 auto 1.5rem auto; display: block;">
-    
-    <h2 style="
-      font-size: 1.8rem;
-      color: #8EBF2A;
-      margin-bottom: 1rem;
-      font-weight: 400;
-      font-family: 'DM Sans', sans-serif;
-    ">
-      Hej och välkommen!
-    </h2>
-
-    <p style="margin-bottom: 1.5rem; color: #444; font-size: 1rem; line-height: 1.6;">
-      Du måste vara minst 18 år för att besöka vår webbplats.
-    </p>
-
-    <div style="display: flex; flex-direction: column; gap: 1rem;">
-      <button onclick="confirmAge()" style="
-        background-color: #8EBF2A;
-        color: white;
-        border: none;
-        padding: 0.8rem 1.5rem;
-        font-size: 1rem;
-        font-weight: bold;
-        border-radius: 30px;
-        cursor: pointer;
-        transition: background-color 0.3s ease;
-      ">Jag är 18 år eller äldre</button>
-
-      <button onclick="leaveSite()" style="
-        background-color: #eee;
-        color: #555;
-        border: 1px solid #ccc;
-        padding: 0.8rem 1.5rem;
-        font-size: 1rem;
-        border-radius: 30px;
-        cursor: pointer;
-        transition: background-color 0.3s ease;
-      ">Nej, lämna sidan</button>
-    </div>
+<!DOCTYPE html>
+<html lang="sv">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Bekräfta din ålder</title>
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      background-color: #f5f5f5;
+      font-family: Arial, sans-serif;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+    }
+    .container {
+      background-color: #ffffff;
+      padding: 40px;
+      border-radius: 16px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+      text-align: center;
+      max-width: 400px;
+      width: 90%;
+    }
+    h1 {
+      margin-bottom: 20px;
+      color: #2e7d32; /* Grön färg */
+    }
+    p {
+      margin-bottom: 30px;
+      color: #555;
+    }
+    .btn {
+      background-color: #2e7d32;
+      color: #ffffff;
+      padding: 12px 24px;
+      border: none;
+      border-radius: 8px;
+      cursor: pointer;
+      font-size: 16px;
+      margin: 10px;
+      width: 120px;
+      transition: background-color 0.3s ease;
+    }
+    .btn:hover {
+      background-color: #1b5e20;
+    }
+    .btn-secondary {
+      background-color: #cccccc;
+      color: #333;
+    }
+    .btn-secondary:hover {
+      background-color: #999999;
+    }
+  </style>
+</head>
+<body>
+  <div class="container">
+    <h1>Är du över 18 år?</h1>
+    <p>Du måste vara minst 18 år för att gå vidare till cbdFlora®.</p>
+    <button class="btn" onclick="redirect()">Ja</button>
+    <button class="btn btn-secondary" onclick="deny()">Nej</button>
   </div>
-</div>
 
-<script>
-  function confirmAge() {
-    window.location.href = "https://cbdflora.se"; // Skickar till riktiga sidan
-  }
-
-  function leaveSite() {
-    window.location.href = "https://www.google.com"; // Skickas bort
-  }
-
-  window.addEventListener('load', function () {
-    document.getElementById('age-verification-overlay').style.visibility = 'visible';
-    document.getElementById('age-verification-overlay').style.opacity = '1';
-    document.body.style.overflow = 'hidden';
-  });
-</script>
-
-<style>
-@media (max-width: 768px) {
-  #age-verification-overlay .container {
-    max-width: 95%;
-    padding: 3rem 1.5rem;
-  }
-
-  #age-verification-overlay h2 {
-    font-size: 2.2rem; /* Större rubrik på mobil */
-  }
-
-  #age-verification-overlay p {
-    font-size: 1.1rem;
-  }
-
-  #age-verification-overlay button {
-    font-size: 1.1rem;
-    padding: 1rem;
-  }
-}
-</style>
-
-
+  <script>
+    function redirect() {
+      window.location.href = "https://cbdflora.se";
+    }
+    function deny() {
+      alert("Du måste vara över 18 år för att fortsätta.");
+    }
+  </script>
+</body>
+</html>
