--- a/index.html
+++ b/index.html
@@ -14,7 +14,24 @@
       justify-content: center;
       align-items: center;
       height: 100vh;
+      position: relative;
+      overflow: hidden;
     }
+
+    /* Bakgrundsvåg */
+    .background-wave {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: url('data:image/svg+xml;base64,PHN2ZyB3aWR0aD0nMTUwMCcgaGVpZ2h0PScxMDAnIHZpZXdCb3g9JzAgMCAxNTAgMTAwJyB4bWxucz0naHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmcnPjxwYXRoIGQ9J00gMCA1MCBDIDUwIDcwIDUwIDAgMTUwIDUwIEwgMTUwIDEwMCBMIDAgMTAwIFoiIGZpbGw9J3doaXRlJy8+PC9zdmc+') no-repeat center center;
+      background-size: cover;
+      filter: blur(8px);
+      opacity: 0.3;
+      z-index: 0;
+    }
+
     .container {
       background-color: #ffffff;
       padding: 40px;
@@ -23,17 +40,19 @@
       text-align: center;
       max-width: 400px;
       width: 90%;
+      position: relative;
+      z-index: 1; /* Ligger ovanpå våg-bakgrunden */
     }
     h1 {
       margin-bottom: 20px;
-      color: #8EBF2A; /* NY färg här */
+      color: #8EBF2A;
     }
     p {
       margin-bottom: 30px;
       color: #555;
     }
     .btn {
-      background-color: #8EBF2A; /* NY färg här */
+      background-color: #8EBF2A;
       color: #ffffff;
       padding: 12px 24px;
       border: none;
@@ -45,7 +64,7 @@
       transition: background-color 0.3s ease;
     }
     .btn:hover {
-      background-color: #6f991f; /* Lite mörkare version vid hover */
+      background-color: #6f991f;
     }
     .btn-secondary {
       background-color: #cccccc;
@@ -57,6 +76,8 @@
   </style>
 </head>
 <body>
+  <div class="background-wave"></div>
+
   <div class="container">
     <h1>Är du över 18 år?</h1>
     <p>Du måste vara över 18 år för att använda den här webbplatsen</p>
