--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
     body {
       margin: 0;
       padding: 0;
-      background-color: #f5f5f5;
+      background: linear-gradient(135deg, #ffffff 25%, #f0f0f0 75%);
+      background-image: url('https://www.transparenttextures.com/patterns/waves.png');
+      background-size: cover;
+      background-repeat: no-repeat;
+      background-attachment: fixed;
       font-family: Arial, sans-serif;
       display: flex;
       justify-content: center;
@@ -17,22 +21,16 @@
       position: relative;
       overflow: hidden;
     }
-
-    /* Bakgrundsvåg */
-    .background-wave {
+    body::before {
+      content: "";
       position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background: url('data:image/svg+xml;base64,PHN2ZyB3aWR0aD0nMTUwMCcgaGVpZ2h0PScxMDAnIHZpZXdCb3g9JzAgMCAxNTAgMTAwJyB4bWxucz0naHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmcnPjxwYXRoIGQ9J00gMCA1MCBDIDUwIDcwIDUwIDAgMTUwIDUwIEwgMTUwIDEwMCBMIDAgMTAwIFoiIGZpbGw9J3doaXRlJy8+PC9zdmc+') no-repeat center center;
-      background-size: cover;
-      filter: blur(8px);
-      opacity: 0.3;
-      z-index: 0;
+      top: 0; left: 0; right: 0; bottom: 0;
+      backdrop-filter: blur(5px);
+      z-index: 1;
     }
-
     .container {
+      position: relative;
+      z-index: 2;
       background-color: #ffffff;
       padding: 40px;
       border-radius: 16px;
@@ -40,8 +38,6 @@
       text-align: center;
       max-width: 400px;
       width: 90%;
-      position: relative;
-      z-index: 1; /* Ligger ovanpå våg-bakgrunden */
     }
     h1 {
       margin-bottom: 20px;
@@ -76,8 +72,6 @@
   </style>
 </head>
 <body>
-  <div class="background-wave"></div>
-
   <div class="container">
     <h1>Är du över 18 år?</h1>
     <p>Du måste vara över 18 år för att använda den här webbplatsen</p>
