--- a/index.html
+++ b/index.html
@@ -8,29 +8,14 @@
     body {
       margin: 0;
       padding: 0;
-      background: linear-gradient(135deg, #ffffff 25%, #f0f0f0 75%);
-      background-image: url('https://www.transparenttextures.com/patterns/waves.png');
-      background-size: cover;
-      background-repeat: no-repeat;
-      background-attachment: fixed;
+      background-color: #f6f5ee;
       font-family: Arial, sans-serif;
       display: flex;
       justify-content: center;
       align-items: center;
       height: 100vh;
-      position: relative;
-      overflow: hidden;
-    }
-    body::before {
-      content: "";
-      position: absolute;
-      top: 0; left: 0; right: 0; bottom: 0;
-      backdrop-filter: blur(5px);
-      z-index: 1;
     }
     .container {
-      position: relative;
-      z-index: 2;
       background-color: #ffffff;
       padding: 40px;
       border-radius: 16px;
@@ -41,14 +26,14 @@
     }
     h1 {
       margin-bottom: 20px;
-      color: #8EBF2A;
+      color: #8EBF2A; /* NY färg här */
     }
     p {
       margin-bottom: 30px;
       color: #555;
     }
     .btn {
-      background-color: #8EBF2A;
+      background-color: #8EBF2A; /* NY färg här */
       color: #ffffff;
       padding: 12px 24px;
       border: none;
@@ -60,7 +45,7 @@
       transition: background-color 0.3s ease;
     }
     .btn:hover {
-      background-color: #6f991f;
+      background-color: #6f991f; /* Lite mörkare version vid hover */
     }
     .btn-secondary {
       background-color: #cccccc;
@@ -86,6 +71,9 @@
     function deny() {
       alert("Du måste vara över 18 år för att fortsätta.");
     }
+  </script>
+</body>
+</html>
   </script>
 </body>
 </html>
