--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      height: 100dvh; /* Dynamisk höjd för bättre mobilanpassning */
-      overflow: hidden; /* Hindra scroll */
+      height: 100dvh;
+      overflow: hidden;
     }
     .container {
       background-color: #ffffff;
@@ -24,17 +24,18 @@
       text-align: center;
       max-width: 400px;
       width: 90%;
+      position: relative;
     }
     h1 {
       margin-bottom: 20px;
-      color: #8EBF2A; /* NY färg här */
+      color: #8EBF2A;
     }
     p {
       margin-bottom: 30px;
       color: #555;
     }
     .btn {
-      background-color: #8EBF2A; /* NY färg här */
+      background-color: #8EBF2A;
       color: #ffffff;
       padding: 12px 24px;
       border: none;
@@ -46,7 +47,7 @@
       transition: background-color 0.3s ease;
     }
     .btn:hover {
-      background-color: #6f991f; /* Lite mörkare version vid hover */
+      background-color: #6f991f;
     }
     .btn-secondary {
       background-color: transparent;
@@ -56,6 +57,48 @@
     .btn-secondary:hover {
       background-color: #999999;
     }
+    .terms-link {
+      display: block;
+      margin-top: 20px;
+      font-size: 14px;
+      color: #555;
+      text-decoration: underline;
+      cursor: pointer;
+    }
+    .modal {
+      display: none; /* Göm från början */
+      position: fixed;
+      z-index: 999;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      overflow: auto;
+      background-color: rgba(0,0,0,0.5);
+    }
+    .modal-content {
+      background-color: #fff;
+      margin: 10% auto;
+      padding: 30px;
+      border-radius: 16px;
+      max-width: 500px;
+      text-align: left;
+      color: #666;
+      font-size: 14px;
+      position: relative;
+    }
+    .close {
+      color: #aaa;
+      position: absolute;
+      top: 10px;
+      right: 20px;
+      font-size: 28px;
+      font-weight: bold;
+      cursor: pointer;
+    }
+    .close:hover {
+      color: #000;
+    }
   </style>
 </head>
 <body>
@@ -64,6 +107,17 @@
     <p>Du måste vara över 18 år för att använda den här webbplatsen</p>
     <button class="btn" onclick="redirect()">Ja</button>
     <button class="btn btn-secondary" onclick="deny()">Nej</button>
+    <span class="terms-link" onclick="openModal()">Villkor</span>
+  </div>
+
+  <!-- Modal -->
+  <div id="termsModal" class="modal">
+    <div class="modal-content">
+      <span class="close" onclick="closeModal()">&times;</span>
+      <hr>
+      <p><strong>Ansvarsfriskrivning:</strong> Denna webbplats är avsedd för informationssyfte och riktar sig endast till personer över 18 år. Vi tillhandahåller allmän information om växtbaserade produkter och naturlig livsstil. Ingen information på denna sida utgör medicinsk rådgivning, rekommendationer eller påstående om hälsofördelar. Besökare ansvarar själva för sina val och handlingar efter att ha lämnat denna webbplats.</p>
+      <p>Genom att fortsätta godkänner du att du är myndig och själv tar ansvar för vilken information du väljer att ta del av efter denna sida.</p>
+    </div>
   </div>
 
   <script>
@@ -72,6 +126,19 @@
     }
     function deny() {
       alert("Du måste vara över 18 år för att fortsätta.");
+    }
+    function openModal() {
+      document.getElementById('termsModal').style.display = 'block';
+    }
+    function closeModal() {
+      document.getElementById('termsModal').style.display = 'none';
+    }
+    // Stäng modalen om man klickar utanför innehållet
+    window.onclick = function(event) {
+      var modal = document.getElementById('termsModal');
+      if (event.target == modal) {
+        modal.style.display = "none";
+      }
     }
   </script>
 </body>
